Only publish dist folder to npm to save on package size

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "0.1.4",
 	"main": "dist/CSRFInput.js",
 	"private": false,
+	"files": [
+		"dist/"
+	],
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
